unpackaged/main/default/objects/OpportunityLineItem/fields/Opp_Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Opp Product External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>