unpackaged/main/default/objects/OpportunityLineItem/fields/Prod_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Prod_Type_New__c</fullName>
    <description>Product type calculated from Quote Lines and old Product Type on Transaction Record Type</description>
    <formula>IF(  SBQQ__QuoteLine__r.Product_Type__c  = NULL,   TEXT(Product_Record_Type__c)  , SBQQ__QuoteLine__r.Product_Type__c)</formula>
    <inlineHelpText>Product type calculated from Quote Lines and old Product Type on Transaction Record Type</inlineHelpText>
    <label>Prod Type New</label>
    <type>Text</type>
</CustomField>