unpackaged/main/default/objects/OpportunityLineItem/fields/Revenue_Streams__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Streams__c</fullName>
    <label>Revenue Streams</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Record_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Rental Revenue</fullName>
            </value>
            <value>
                <fullName>Carry-on Options</fullName>
            </value>
            <value>
                <fullName>New Fleet Sales</fullName>
            </value>
            <value>
                <fullName>Used Fleet Sales</fullName>
            </value>
            <value>
                <fullName>Used Non-Fleet Sales</fullName>
            </value>
            <value>
                <fullName>Initial Transportation</fullName>
            </value>
            <value>
                <fullName>Return Transportation</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Dismantle</fullName>
            </value>
            <value>
                <fullName>Catering(ES)</fullName>
            </value>
            <value>
                <fullName>Sublease Equipment</fullName>
            </value>
            <value>
                <fullName>Accommodation (Mandays)</fullName>
            </value>
            <value>
                <fullName>Food &amp; beverage (Catering - LG)</fullName>
            </value>
            <value>
                <fullName>Sub-Contractors (Rental/Equip/TV etc.)</fullName>
            </value>
            <value>
                <fullName>Consumables (Fuel/Sewage/Water/Trash etc.)</fullName>
            </value>
            <value>
                <fullName>Operational Services (HSE/IT/Security etc.)</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>